
  * Add a --auto-build option to try to determine which specific variations
    cause unreproducibility.
  * Fix varying both umask and user_group at the same time.
  * Improve error messages in some common scenarios:
    - giving a source_root or build_command that doesn't exist
    - using reprotest with default settings after not installing Recommends

 -- Ximin Luo <infinity0@debian.org>  Fri, 22 Sep 2017 17:57:31 +0200

reprotest (0.7) unstable; urgency=medium

  [ Ximin Luo ]
  * Document when one should use --diffoscope-args=--exclude-directory-metadata
    and do this in our Debian package presets.
  * Bump diffoscope Recommends version to >= 84 to support this flag.
  * Import autopkgtest 4.4, with minimal patches.
  * Choose an existent HOME for the control build. (Closes: #860428)
  * Add the ability to vary the user (Closes: #872412)
  * Heavy refactoring to support > 2 builds.
  * Add a variation config language to be able to configure the specifics of
    different variations, and to make it easier to configure further builds.
  * Deprecate the --dont-vary flag, add a --vary flag for better composability.
  * Support >2 builds using the new --extra-build flag.
  * Properly sanitize artifact_pattern to avoid arbitrary shell execution.
  * Update to Standards-Version 4.1.0.

  [ Mattia Rizzolo ]
  * Use https for the Format URI in debian/copyright.
  * Bump debhelper compat level to 10.

  [ Santiago Torres ]
  * Abstract parts of autopkgtest to support running on non-Debian systems.
  * Add a --host-distro flag to support that too.

 -- Ximin Luo <infinity0@debian.org>  Tue, 19 Sep 2017 14:18:18 +0200

reprotest (0.6.2) unstable; urgency=medium

  * Add a documentation section on "Known bugs".
  * Move developer documentation away from the man page.
  * Mention release instructions in the previous changelog.

 -- Ximin Luo <infinity0@debian.org>  Tue, 09 May 2017 21:56:22 +0200

reprotest (0.6.1) unstable; urgency=medium

  [ Ximin Luo ]