@@ -3,6 +3,8 @@
 
 import collections
 import os
+import shlex
+import subprocess
 
 
 class AttributeFunctor(collections.namedtuple('_AttributeFunctor', 'x f')):
@@ -13,7 +15,7 @@ class AttributeFunctor(collections.namedtuple('_AttributeFunctor', 'x f')):
 
 
 class ReprotestPreset(collections.namedtuple('_ReprotestPreset',
-    'build_command artifact_pattern testbed_pre testbed_init diffoscope_args')):
+    'build_command artifact_pattern testbed_pre testbed_init source_pattern diffoscope_args')):
     """Named-tuple representing a reprotest command preset.
 
     You can manipulate it like this:
@@ -61,6 +63,7 @@ PRESET_DEB_DIR = ReprotestPreset(
     artifact_pattern = '../*.deb',
     testbed_pre = None,
     testbed_init = None,
+    source_pattern = None,
     diffoscope_args = ["--exclude-directory-metadata"],
 )
 
@@ -72,10 +75,18 @@ def preset_deb_schroot(preset):
         test -c /dev/fuse || mknod -m 666 /dev/fuse c 10 229'
     )
 
-def preset_deb_dsc(fn):
+def parse_dsc_aux(path):
+    dscfiles = subprocess.check_output(["egrep",
+        # this regex comes from dcmd(1) from the devscripts package
+        r"^ [0-9a-f]{32} [0-9]+ ((([a-zA-Z0-9_.-]+/)?[a-zA-Z0-9_.-]+|-) ([a-zA-Z]+|-) )?(.*)$",
+        path])
+    return [x.split()[-1].decode("utf-8") for x in dscfiles.splitlines()]
+
+def preset_deb_dsc(fn, aux):
     return PRESET_DEB_DIR.prepend.build_command(
             'dpkg-source -x "%s" build && cd build && ' % fn
-        ).set.artifact_pattern("*.deb")
+        ).set.artifact_pattern("*.deb"
+        ).set.source_pattern(" ".join(shlex.quote(a) for a in [fn] + aux))
 
 def get_presets(buildfile, virtual_server):
     fn = os.path.basename(buildfile)
@@ -89,8 +100,8 @@ def get_presets(buildfile, virtual_server):
     elif os.path.isfile(buildfile):
         if parts[1] == '.dsc':
             if virtual_server == "null":
-                return preset_deb_dsc(fn)
+                return preset_deb_dsc(fn, parse_dsc_aux(buildfile))
             else:
-                return preset_deb_schroot(preset_deb_dsc(fn))
+                return preset_deb_schroot(preset_deb_dsc(fn, parse_dsc_aux(buildfile)))
     raise ValueError('unrecognised file type: "%s"; try giving '
                      'an appropriate --build-command' % buildfile)
