@@ -6,6 +6,8 @@ reprotest (0.7.1) UNRELEASED; urgency=medium
   * Improve error messages in some common scenarios:
     - giving a source_root or build_command that doesn't exist
     - using reprotest with default settings after not installing Recommends
+  * Add a --source-pattern option to restrict copying of source_root, and set
+    this automatically in our presets.
 
  -- Ximin Luo <infinity0@debian.org>  Fri, 22 Sep 2017 17:57:31 +0200
 
